--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
-    <title>Notícia</title>
+    <title>BITtek - O maior portal de notícias geek</title>
   </head>
   <body>
     <div class="container">
