--- a/apple.html
+++ b/apple.html
@@ -310,7 +310,7 @@
             >
           </div>
         </div>
-        <hr class="line" />
+        <hr class="line-footer" />
         <div class="copyright">
           <span>© 2021 BITtek - All rights reserved.</span>
         </div>
