--- a/contact-us.html
+++ b/contact-us.html
@@ -198,7 +198,7 @@
             >
           </div>
         </div>
-        <hr class="line" />
+        <hr class="line-footer" />
         <div class="copyright">
           <span>© 2021 BITtek - All rights reserved.</span>
         </div>
