--- a/justice.html
+++ b/justice.html
@@ -308,7 +308,7 @@
             >
           </div>
         </div>
-        <hr class="line" />
+        <hr class="line-footer" />
         <div class="copyright">
           <span>© 2021 BITtek - All rights reserved.</span>
         </div>
