--- a/xiaomi-redmi.html
+++ b/xiaomi-redmi.html
@@ -313,7 +313,7 @@
             >
           </div>
         </div>
-        <hr class="line-footer" />
+        <hr class="line" />
         <div class="copyright">
           <span>© 2021 BITtek - All rights reserved.</span>
         </div>
